--- a/VS/trunk/CommServer.UA.Server/DataBindings/app.config
+++ b/VS/trunk/CommServer.UA.Server/DataBindings/app.config
@@ -6,7 +6,7 @@
 		</sectionGroup>
 	</configSections>
 	<startup>
-	<supportedRuntime version="v2.0.50727" /></startup>
+	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup>
 	<applicationSettings>
 		<CAS.UA.Server.DataBindings.Properties.Settings>
 			<setting name="AutoBindingToSimulatorForNotConfiguredVariables" serializeAs="String">
@@ -23,6 +23,14 @@
       <dependentAssembly>
         <assemblyIdentity name="CAS.CodeProtect" publicKeyToken="8832ff1a67ea61a3" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.2.19526" newVersion="4.0.2.19526" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CAS.CommServer.DAClientConfiguration" publicKeyToken="8832ff1a67ea61a3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.2.37849" newVersion="5.1.2.37849" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CAS.CommServer.DA.Server.Configuration" publicKeyToken="8832ff1a67ea61a3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.15768" newVersion="4.1.0.15768" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
