--- a/VS/trunk/CommServer.UA.Server/UAServer/App.config
+++ b/VS/trunk/CommServer.UA.Server/UAServer/App.config
@@ -278,6 +278,18 @@
     </roleManager>
   </system.web>
   <startup>
-    <supportedRuntime version="v2.0.50727" />
-  </startup>
+    
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="CAS.CommServer.DA.Server.Configuration" publicKeyToken="8832ff1a67ea61a3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.15768" newVersion="4.1.0.15768" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CAS.CommServer.DAClientConfiguration" publicKeyToken="8832ff1a67ea61a3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.2.37849" newVersion="5.1.2.37849" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
