--- a/DataBindings/packages.config
+++ b/DataBindings/packages.config
@@ -1,4 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CAS.CodeProtect" version="5.0.2" targetFramework="net451" />
+  <package id="CAS.CommServer.CommonBus" version="5.01.02-Charlie" targetFramework="net461" />
+  <package id="CAS.CommServer.DA.Client" version="2.00.14-Echo" targetFramework="net451" />
+  <package id="CAS.CommServer.DA.ItemDescriber" version="1.00.2-Delta" targetFramework="net461" />
+  <package id="CAS.CommServer.DA.Server.Configuration" version="4.1.2-Alpha" targetFramework="net461" />
+  <package id="CAS.CommServer.DAClientConfiguration" version="5.01.02-Charlie" targetFramework="net451" />
+  <package id="CAS.CommServer.DeviceSimulator" version="5.01.02-Alpha" targetFramework="net451" />
+  <package id="CAS.CommServer.OPCClassic.SDK.COMWrapper" version="2.01.106" targetFramework="net451" />
+  <package id="CAS.CommServer.OPCClassic.SDK.Core" version="2.01.106" targetFramework="net451" />
+  <package id="CAS.CommServer.ProtocolHub.Communication" version="4.00.22-Alpha" targetFramework="net461" />
+  <package id="CAS.CommServer.UA.ConfigurationEditor.ServerConfiguration" version="3.20.1-Hotel" targetFramework="net461" />
+  <package id="CAS.RealTime" version="5.0.2" targetFramework="net451" />
+  <package id="CAS.UA.Common" version="3.00.02-Charlie" targetFramework="net461" />
   <package id="CAS.UA.IServerConfiguration" version="1.00.00" targetFramework="net35" />
+  <package id="CAS.Windows.Forms" version="5.0.6-Charlie" targetFramework="net451" />
+  <package id="OPC.UA.SDK.Core" version="1.01.326" targetFramework="net461" />
 </packages>
