--- a/LaunchTest_CommServer/App.config
+++ b/LaunchTest_CommServer/App.config
@@ -139,4 +139,4 @@
       </add>
     </sharedListeners>
   </system.diagnostics>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
