commserver.ua.server - remove direct references - ApplicationCertificate unit tests  - added unit tests to CommServer.UA.Server Issue #: 4863

--- a/UALibrary/Server.Library.csproj
+++ b/UALibrary/Server.Library.csproj
@@ -172,9 +172,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataBindings\DataBindings.csproj">
+    <ProjectReference Include="..\DataBindings\Server.DataBindings.csproj">
       <Project>{303CFB1D-CEF3-4ECC-B9FD-C7DFC6308810}</Project>
-      <Name>DataBindings</Name>
+      <Name>Server.DataBindings</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
