--- a/UAServer/App.config
+++ b/UAServer/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <section name="CAS.UA.Server" type="Opc.Ua.ApplicationConfigurationSection,Opc.Ua.Core" />
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="CAS.CommServer.UA.Server.Service.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="CAS.UA.Server.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="CAS.UA.Server.DataBindings.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
@@ -65,33 +66,17 @@
     </diagnostics>
     -->
   </system.serviceModel>
-  <!--
-  <system.diagnostics>
-		<sources>
-			<source name="System.ServiceModel" switchValue="Verbose, ActivityTracing">
-				<listeners>
-					<add type="System.Diagnostics.DefaultTraceListener" name="Default"/>
-					<add name="ServiceModel Listener"/>
-				</listeners>
-			</source>
-			<source name="System.ServiceModel.MessageLogging">
-				<listeners>
-					<add type="System.Diagnostics.DefaultTraceListener" name="Default"/>
-					<add name="ServiceModel Listener"/>
-				</listeners>
-			</source>
-		</sources>
-		<sharedListeners>
-			<add initializeData="Opc.Ua.SampleServer.svclog" type="System.Diagnostics.XmlWriterTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" name="ServiceModel Listener" traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ProcessId, ThreadId, Callstack"/>
-    </sharedListeners> 
-  </system.diagnostics>
-  -->
   <CAS.UA.Server>
     <ConfigurationLocation xmlns="http://opcfoundation.org/UA/SDK/Configuration.xsd">
       <FilePath>EmbeddedExample\DemoConfiguration\BoilerExample.uasconfig</FilePath>
     </ConfigurationLocation>
   </CAS.UA.Server>
   <applicationSettings>
+    <CAS.CommServer.UA.Server.Service.Properties.Settings>
+      <setting name="ConfigurationFilePath" serializeAs="String">
+        <value>EmbeddedExample\DemoConfiguration\BoilerExample.uasconfig</value>
+      </setting>
+    </CAS.CommServer.UA.Server.Service.Properties.Settings>
     <CAS.UA.Server.Properties.Settings>
       <setting name="ConfigurationFilePath" serializeAs="String">
         <value>EmbeddedExample\DemoConfiguration\BoilerExample.uasconfig</value>
@@ -278,8 +263,8 @@
     </roleManager>
   </system.web>
   <startup>
-    
-  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
