Update the NET API SDK form OPCF - Synchronize the repository with OPCF.SDK.2_01_106_0 - upgrading CommServer.UA.Server Issue #: 4842

--- a/Server.ServiceUnitTest/app.config
+++ b/Server.ServiceUnitTest/app.config
@@ -66,4 +66,12 @@
       <FilePath>EmbeddedExample\DemoConfiguration\BoilerExample.uasconfig</FilePath>
     </ConfigurationLocation>
   </CAS.UA.Server>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="CAS.CommServer.DAClientConfiguration" publicKeyToken="8832ff1a67ea61a3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.2.14790" newVersion="5.1.2.14790" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
