--- a/Server.Library/app.config
+++ b/Server.Library/app.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="CAS.CommServer.DAClientConfiguration" publicKeyToken="8832ff1a67ea61a3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.2.14790" newVersion="5.1.2.14790" />
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
 </configuration>
