CAS.CommServer.ProtocolHub - rearrange - initial refactoring  -updated and tested: CommServer.UA.Server Issue #: 4860

--- a/Server.DataBindings/packages.config
+++ b/Server.DataBindings/packages.config
@@ -3,7 +3,7 @@
   <package id="CAS.CodeProtect" version="5.0.2" targetFramework="net451" />
   <package id="CAS.CommServer.CommonBus" version="5.01.02-Charlie" targetFramework="net461" />
   <package id="CAS.CommServer.DA.Client" version="2.00.14-Foxtrot" targetFramework="net461" />
-  <package id="CAS.CommServer.ProtocolHub.ItemDescriber" version="1.00.2-Echo" targetFramework="net461" />
+  <package id="CAS.CommServer.DA.ItemDescriber" version="1.00.2-Foxtrot" targetFramework="net461" />
   <package id="CAS.CommServer.DAClientConfiguration" version="5.01.02-Delta" targetFramework="net461" />
   <package id="CAS.CommServer.DAServerConfiguration" version="4.1.2-Delta" targetFramework="net461" />
   <package id="CAS.CommServer.DeviceSimulator" version="5.01.02-Delta" targetFramework="net461" />
